--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
+/* main-styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
+
+
+/* Colores personalizados */
+:root {
+    --yale-blue: #0d3b66;
+    --lemon-chiffon: #faf0ca;
+    --naples-yellow: #f4d35e;
+    --sandy-brown: #ee964b;
+    --tomato: #f95738;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar-custom {
+  background-color: var(--yale-blue) !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Usando la fuente Montserrat desde Google Fonts, importada en <head>*/
+
+/* Estilos para los encabezados*/
+.h1 {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
-.App-header {
-  background-color: #282c34;
+/* Estilos para los párrafos */
+p {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+/* Estilos generales para el cuerpo */
+body {
+  margin: 0;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* https://grabient.com/HQdhDYBpQZhbwE4bQIwFYXA1b5XQAsADAExGrnAyJSrCImT20osgxA?style=linearGradient&steps=34&angle=90 */
+  background: linear-gradient(90deg,
+   rgba(234, 227, 217, 1.000) 0.000%,
+     rgba(235, 227, 218, 1.000) 3.030%,
+      rgba(236, 228, 218, 1.000) 6.061%,
+       rgba(236, 228, 218, 1.000) 9.091%,
+        rgba(237, 228, 217, 1.000) 12.121%,
+         rgba(237, 227, 217, 1.000) 15.152%,
+          rgba(237, 227, 216, 1.000) 18.182%,
+           rgba(236, 226, 215, 1.000) 21.212%,
+            rgba(236, 225, 214, 1.000) 24.242%,
+             rgba(235, 223, 213, 1.000) 27.273%,
+              rgba(234, 222, 211, 1.000) 30.303%,
+               rgba(233, 220, 209, 1.000) 33.333%,
+                rgba(231, 218, 207, 1.000) 36.364%,
+                 rgba(230, 216, 205, 1.000) 39.394%,
+                  rgba(228, 214, 203, 1.000) 42.424%,
+                   rgba(226, 211, 200, 1.000) 45.455%,
+                    rgba(224, 209, 198, 1.000) 48.485%,
+                     rgba(221, 206, 195, 1.000) 51.515%,
+                      rgba(219, 203, 192, 1.000) 54.545%,
+                       rgba(216, 200, 189, 1.000) 57.576%,
+                        rgba(214, 197, 186, 1.000) 60.606%,
+                         rgba(211, 194, 183, 1.000) 63.636%,
+                          rgba(208, 191, 180, 1.000) 66.667%,
+                           rgba(205, 188, 177, 1.000) 69.697%,
+                            rgba(202, 185, 174, 1.000) 72.727%,
+                             rgba(199, 182, 171, 1.000) 75.758%,
+                              rgba(196, 179, 168, 1.000) 78.788%,
+                               rgba(193, 176, 165, 1.000) 81.818%,
+                                rgba(190, 173, 162, 1.000) 84.848%,
+                                 rgba(187, 170, 159, 1.000) 87.879%,
+                                  rgba(185, 167, 156, 1.000) 90.909%,
+                                   rgba(182, 165, 154, 1.000) 93.939%,
+                                    rgba(179, 162, 151, 1.000) 96.970%,
+                                     rgba(177, 160, 149, 1.000) 100.000%);
+                                     /* cambios menores */
+                                     
 }
 
-.App-link {
-  color: #61dafb;
+
+/* Estilo general para nav */
+#header {
+    background-color: var(--yale-blue);
+    color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#main {
+  margin-left: 250px; /* Ancho del sidebar */
+  padding: 20px;
+  min-height: calc(100vh - 64px); /* Altura total menos la altura del header */
 }
+
+.product-card-img-top {
+  width: 140px;
+  height: 200px;   
+  object-fit: cover;
+}
+
+.product-card {
+  max-width: 250px; 
+  margin: auto;  
+
+}
+
